# DRAGyS

./: DRAGyS.rar  LICENSE  README.md
DRAGyS/: DRAGyS.py  Filter_Pixel.py  Main.py  README.md  SPF_Window.py  Setup.py  Tools.py  __init__.py  pyproject.toml  setup.py
Data/MCFOST/Fitting_Article_H5/PA270_i70_H5/data_1.6/: MCFOST_PA270_i70_H5.fits
Example/: MCFOST_PA270_i70_H5_nph7.fits
GUI/: Setup.py
python/: setup.py
python/dragys/: __init__.py  dragys.py  run_dragys_backup.py  tools.py
