[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.8"
name = "DRAGyS"
version = "1.0.0"
dynamic = ["version"]

authors = [
  {name = "Maxime Roumesy", email = "mroumesy@gmail.com"},
]

maintainers = [
  {name = "Maxime Roumesy", email = "mroumesy@gmail.com"},
]

description = "Disk Ring Adjusted Geometry yields Scattering phase function"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["protoplanetary", "disk", "ring", "ellipse", "dust", "Scattering Phase function"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
    "numpy", "matplotlib", "PyQt6", "astropy", "scipy",
]


[project.urls]
Repository = "https://github.com/mroumesy/DRAGyS.git"
"Bug Tracker" = "https://github.com/mroumesy/DRAGyS/issues"


